--- a/src/main/resources/static/docx.html
+++ b/src/main/resources/static/docx.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="./vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>API Document</title>
+    <title>API Document v0</title>
     <script type="module" crossorigin>(function () {
         const t = document.createElement("link").relList;
         if (t && t.supports && t.supports("modulepreload")) return;
